--- a/CistellAissam/Views/Cistell/LayoutCistel.cshtml
+++ b/CistellAissam/Views/Cistell/LayoutCistel.cshtml
@@ -22,16 +22,7 @@
             overflow-y: hidden;
         }
 
-        .b-example-divider {
-            flex-shrink: 0;
-            width: 1.5rem;
-            height: 100vh;
-            background-color: rgba(0, 0, 0, .1);
-            border: solid rgba(0, 0, 0, .15);
-            border-width: 1px 0;
-            box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-        }
-
+      
         .bi {
             vertical-align: -.125em;
             pointer-events: none;
@@ -102,7 +93,13 @@
         .lh-tight {
             line-height: 1.25;
         }
-        </style>
+
+
+        .productes {
+            margin-left: 10%;
+        }
+    </style>
+       
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
