--- a/CistellAissam/Views/Cistell/Cistell.cshtml
+++ b/CistellAissam/Views/Cistell/Cistell.cshtml
@@ -13,7 +13,7 @@
             <img width="300" height="300" src="/imatges/@product.imatgeproducte" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
                 <figcaption class="figure-caption">@product.nomProducte <br /><b>@product.preuProducte €</b></figcaption>
                 <form asp-asp-controller="Cistell" asp-action="Afegir" method="post">
-                <input type="hidden" value="@product.codiProducte"/>
+                        <input type="hidden" name="codeproducte" value="@product.codiProducte"/>
                 <input class="btn btn-outline-secondary" type="submit" value="Afegir a Cesta"/>
                 </form>
                  
