--- a/CistellAissam/Views/Cistell/LayoutCistel.cshtml
+++ b/CistellAissam/Views/Cistell/LayoutCistel.cshtml
@@ -1,4 +1,7 @@
-﻿<!DOCTYPE html>
+﻿
+
+
+<!DOCTYPE html>
     <html>
     <head>
         <title>Aissam</title>
@@ -16,6 +19,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="~/css/estiltienda.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     </head>
     <body>
     
@@ -31,15 +35,21 @@
     <ul class="nav nav-pills flex-column mb-auto">
         <li class="nav-item">
                     <a asp-controller="Cistell" asp-action="Index" class="nav-link active" aria-current="page">
-                <svg class="bi me-2" width="16" height="16"><use xlink:href="#home" /></svg>
-                Tienda
+                        <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2" /></svg>
+                       🛍️
+                        &nbsp; BOTIGA
             </a>
                   
         </li>
         <li>
             <a href="#" class="nav-link text-white">
                 <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2" /></svg>
-                Cistell
+                        🛒&nbsp;
+                     
+
+                        CISTELL   <span class="text-warning">(@ViewData["contador"])</span>
+
+
             </a>
         </li>
        
