-AFEGIR LA QUANTITAT I  PREU TOTAL DE CADA UNITAT -FUNVIONALITAT ACTUALIZAR NUM CISTELL EN PROGRESS

--- a/CistellAissam/Views/Cistell/cistellCompra.cshtml
+++ b/CistellAissam/Views/Cistell/cistellCompra.cshtml
@@ -7,17 +7,24 @@
 <div class="cistella-container">
     <h1 class="cistella-title">Cistell de Compra</h1>
     <div class="productes">
+       
         @foreach (var product in Model)
         {
+			
             <div class="product-card">
                 <img class="product-image" src="/imatges/@product.imatgeproducte" alt="@product.nomProducte">
                 <div class="product-info">
                     <h3 class="product-name">@product.nomProducte</h3>
-                    <p class="product-price"><b>@product.preuProducte €</b></p>
+                    <small class="small">codi: @product.codiProducte</small>
+                    <p>Preu: <b class=" product-price">@product.preuProducte €</b> Preu Total : <b class="product-price">@ViewData["preuTotalt" + product.codiProducte]</b></p>
                     <div class="product-actions">
                         <label for="quantity-@product.preuProducte">Quantitat:</label>
-                        <input id="quantity-@product.preuProducte" type="number" value="1" min="1" class="quantity-input">
-                        <button class="btn btn-danger btn-sm remove-btn">Eliminar</button>
+                        <form action="ActualizarQuantitatCistell" asp-asp-controller="Cistell" method="post">
+                            <input name="codeproducte" type="hidden" value="@product.codiProducte" />
+                            <input name="quantitat" id="quantity-@product.preuProducte" type="number" value="@ViewData["quantitat"+product.codiProducte]" min="0" class="quantity-input">
+                            <input type="submit" class="btn btn-success" value="actualitzar" />
+                        </form>
+                       
                     </div>
                 </div>
             </div>
@@ -25,5 +32,6 @@
     </div>
     <div class="cistella-footer">
         <button class="btn btn-success btn-lg checkout-btn">Finalitzar Compra</button>
+        <b>Total: <span id="total">@ViewData["preuTotal"]</span> €</b>
     </div>
 </div>
