--- a/CistellAissam/Views/Cistell/LayoutCistel.cshtml
+++ b/CistellAissam/Views/Cistell/LayoutCistel.cshtml
@@ -157,17 +157,14 @@
         }
 
         .product-actions {
-            justify-content: center;
+            justify-content: left;
         }
 
-        .checkout-btn {
-            width: 100%;
-        }
 
-        }
+        
     </style>
 
-    </style>
+   
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
