--- a/CistellAissam/Views/Cistell/LayoutCistel.cshtml
+++ b/CistellAissam/Views/Cistell/LayoutCistel.cshtml
@@ -1,7 +1,8 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-    <title>Aissam</title>
+    <title>
+        Aissam-@ViewData["title"]</title>
     <style>
         main {
             display: flex;
