--- a/CistellAissam/wwwroot/css/estiltienda.css
+++ b/CistellAissam/wwwroot/css/estiltienda.css
@@ -1,11 +1,4 @@
-﻿.productes {
-    display: flex;
-    gap: 20px;
-    flex-wrap:wrap;
-    margin-left:10%;
-
-    margin-right:auto;
-}
+﻿
 .btn-outline-secondary{
     margin-top:10%;
 }
@@ -138,8 +131,5 @@
     justify-content: center;
 }
 
-.checkout-btn {
-    width: 50%;
-    
-}
+
 
