--- a/CistellAissam/Views/Cistell/cistellCompra.cshtml
+++ b/CistellAissam/Views/Cistell/cistellCompra.cshtml
@@ -21,7 +21,7 @@
                         <label for="quantity-@product.preuProducte">Quantitat:</label>
                         <form asp-action="ActualizarQuantitatCistell" asp-controller="Cistell" method="post">
                             <input name="codeproducte" type="hidden" value="@product.codiProducte" />
-                            <input name="quantitat" id="quantity-@product.preuProducte" type="number" value="@ViewData["quantitat"+product.codiProducte]" min="0" class="quantity-input">
+                            <input name="quantitat" id="quantity-@product.codiProducte" type="number" value="@ViewData["quantitat"+product.codiProducte]" min="0" class="quantity-input">
                             <input type="submit" class="btn btn-success" value="actualitzar" />
                         </form>
                        
