finalizar practica revisar codi i documentar-lo

--- a/CistellAissam/Views/Cistell/Cistell.cshtml
+++ b/CistellAissam/Views/Cistell/Cistell.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<Producte>
 @{
-    ViewData["title"] = "TendaCistell";
+    ViewData["title"] = "Botiga Cistell";
 
 }
 @{
@@ -9,8 +9,8 @@
     <div class="productes">
    
     @foreach (var product in Model){
-    <figure class="figure" style="text-align:center;">
-            <img width="300" height="300" src="/imatges/@product.imatgeproducte" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+            <figure class="figure col mb-5" style="text-align:center; ">
+                <img width="300" height="300" src="/imatgesProductes/@product.imatgeproducte" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
                 <figcaption class="figure-caption">@product.nomProducte <br /><b>@product.preuProducte €</b></figcaption>
                 <form asp-controller="Cistell" asp-action="Afegir" method="post">
                         <input type="hidden" name="codeproducte" value="@product.codiProducte"/>
