--- a/CistellAissam/Views/Cistell/FinalitzarCompra.cshtml
+++ b/CistellAissam/Views/Cistell/FinalitzarCompra.cshtml
@@ -10,7 +10,7 @@
     <div class="card">
     <div class="card-header">
         <div class="dades">
-                <img src="~/imatges/padelponoitlogo.png" alt="logo empresa" />
+                <img src="~/imatgesProductes/padelponoitlogo.png" alt="logo empresa" />
                
         </div>
       
@@ -35,7 +35,7 @@
     {
           
             <tr>
-                    <td> <img class="product-image" src="/imatges/@producte.imatgeproducte" alt="@producte.nomProducte"></td>
+                            <td> <img class="product-image" src="/imatgesProductes/@producte.imatgeproducte" alt="@producte.nomProducte"></td>
                     <td>@producte.nomProducte</td>
                     
                     <td>@producte.preuProducte</td>
