--- a/CistellAissam/Views/Cistell/Cistell.cshtml
+++ b/CistellAissam/Views/Cistell/Cistell.cshtml
@@ -3,6 +3,21 @@
     ViewData["title"] = "Botiga Cistell";
 
 }
+@section Css {
+    <style>
+        .productes {
+            display: inline-grid;
+            width: 80%;
+            margin-left:auto;
+			margin-right: auto;
+            justify-content: center;
+            align-items: center;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 20px;
+   
+        }
+    </style>
+}
 @{
    
      
