Refactorización de lógica de cesta y mejoras en UI
Se ha añadido la importación del espacio de nombres `CistellAissam.Logicacistella` en `CistellController.cs`.
Se ha creado una instancia de `AccionsCistella` en `CistellController.cs`.
En el método `Afegir` de `CistellController.cs`, se ha reemplazado la lógica de manejo de la sesión con el uso de `AccionsCistella` para agregar productos y obtener la cesta.
En el método `Cestill` de `CistellController.cs`, se ha actualizado la lógica para obtener los productos de la sesión utilizando `AccionsCistella` y se ha simplificado el cálculo del precio total.
En el método `FinalitzarCompra` de `CistellController.cs`, se ha actualizado la lógica para obtener los productos de la sesión utilizando `AccionsCistella` y se ha simplificado el cálculo del precio total.
Se ha añadido el método `AfegirProducte` en `ProducteController.cs` para manejar la adición de productos.
En `CistellRepo.cs`, se ha añadido el método `AfegirProducte` para agregar productos a la base de datos.
En `cistellCompra.cshtml`, se ha añadido una condición para mostrar los productos solo si hay elementos en el modelo y se ha corregido la visualización del precio total.
En `AfegirProducte.cshtml`, se ha añadido una sección CSS para estilos y se ha modificado el formulario para permitir la carga de archivos de imagen.
Se ha creado la clase `AccionsCistella` en `AccionsCistella.cs` para manejar las acciones relacionadas con la cesta, como agregar, obtener y eliminar productos.
Se ha creado la clase `Cistella` en `Cistella.cs` para representar los productos en la cesta.
Se ha añadido un archivo CSS `estilform.css` para aplicar estilos a las etiquetas y entradas del formulario.

--- a/CistellAissam/Views/Producte/AfegirProducte.cshtml
+++ b/CistellAissam/Views/Producte/AfegirProducte.cshtml
@@ -2,16 +2,20 @@
 @{
    
 }
+@section Css{
+	<link href="~/css/estilform.css" rel="stylesheet" />
+}
 
 @{
-    <form>
+    <form enctype="multipart/form-data" asp-action="AfegirProducte" asp-controller="Producte">
         <label asp-for="codiProducte"></label>
         <input asp-for="codiProducte" /> <span asp-validation-for="codiProducte" class="text-danger"></span>
          <label asp-for="nomProducte"></label>
         <input asp-for="nomProducte" /> <span asp-validation-for="nomProducte" class="text-danger"></span>
         <label asp-for="preuProducte"></label>
         <input asp-for="preuProducte" /> <span asp-validation-for="preuProducte" class="text-danger"></span>
-        <input type="hidden" asp-for="imatgeproducte" value="padadid.jpg" /> <span asp-validation-for="imatgeproducte" class="text-danger"></span>
+        <input type="file" accept="jpg/avif" asp-for="imatgeproducte" /> <span asp-validation-for="imatgeproducte" class="text-danger"></span>
+		<input asp-action="AfegirProducte" asp-controller="Producte" type="submit" value="Afegir" />
         
 
     </form>
