--- a/CistellAissam/Views/Cistell/cistellCompra.cshtml
+++ b/CistellAissam/Views/Cistell/cistellCompra.cshtml
@@ -8,6 +8,7 @@
 <div class="cistella-container">
     <h1 class="cistella-title">Cistell de Compra</h1>
    
+    @if(Model.Count > 0){
        
         @foreach (var product in Model)
         {
@@ -17,7 +18,7 @@
                 <div class="product-info">
                     <h3 class="product-name">@product.nomProducte</h3>
                     <small class="small">codi: @product.codiProducte</small>
-                    <p>Preu: <b class=" product-price">@product.preuProducte €</b> Preu Total : <b class="product-price">@ViewData["preuTotalt" + product.codiProducte]</b></p>
+                    <p>Preu: <b class=" product-price">@product.preuProducte €</b> Preu Total : <b class="product-price">@ViewData["preuTotalt" + product.codiProducte] €</b></p>
                     <div class="product-actions" style="margin-left:25%;">
                         <label for="quantity-@product.preuProducte">Quantitat:</label>
                         <form asp-action="ActualizarQuantitatCistell" asp-controller="Cistell" method="post">
@@ -29,6 +30,7 @@
                     </div>
                 </div>
             </div>
+        }
         }
    
 
