--- a/CistellAissam/Views/Shared/LayoutCistel.cshtml
+++ b/CistellAissam/Views/Shared/LayoutCistel.cshtml
@@ -30,6 +30,9 @@
             flex-grow: 1;
             padding: 20px;
         }
+       a{
+            color:white;
+        }
 
       
       
@@ -54,18 +57,21 @@
             <hr>
             <ul class="nav nav-pills flex-column mb-auto">
                 <li class="nav-item">
-                    <a asp-controller="Cistell" asp-action="Index" class="nav-link" id="tienda" aria-current="page">
+                    <a asp-controller="Cistell" style="color:white;" asp-action="Index" class="nav-link" id="tienda" aria-current="page">
                         🛍️ &nbsp; BOTIGA
                     </a>
                 </li>
+                @if(ViewData["pagina"] != "afegir")
+                {
                 <li>
                     <a asp-controller="Cistell" asp-action="Cestill" class="nav-link" id="Cistell" aria-current="page">
                         <svg data-name="Layer 1" width="30px" id="Layer_1" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><title /><path fill="white" d="M5.53,5,5,3H1.25a1,1,0,0,0,0,2H3.47L6.7,18H20V16H8.26l-.33-1.34L21,12.17V5ZM19,10.52,7.45,12.71,6,7H19ZM7,19a1.5,1.5,0,1,0,1.5,1.5A1.5,1.5,0,0,0,7,19Zm12,0a1.5,1.5,0,1,0,1.5,1.5A1.5,1.5,0,0,0,19,19Z" /></svg>&nbsp;<span class="text-warning">@ViewData["contador"]</span>
                     </a>
                 </li>
+                }
                 <li>
-                    <a asp-controller="Producte" asp-action="Index" class="nav-link" id="Cistell" aria-current="page">
-                   + Afegir Nou Producte
+                    <a asp-controller="Producte" style="color:white;" asp-action="Index" class="nav-link" id="Cistell" aria-current="page">
+                   <i class="fa fa-plus"></i> Afegir Nou Producte
                     </a>
                 </li>
               
