--- a/CistellAissam/Views/Producte/AfegirProducte.cshtml
+++ b/CistellAissam/Views/Producte/AfegirProducte.cshtml
@@ -1,20 +1,23 @@
 ﻿@model Producte;
-@{
-   
-}
-@section Css{
+
+@section Css {
 	<link href="~/css/estilform.css" rel="stylesheet" />
 }
 
 @{
     <form enctype="multipart/form-data" asp-action="AfegirProducte" asp-controller="Producte" method="post">
+        <fieldset>
+          <legend>Afegir Nou Producte</legend>
         <label asp-for="codiProducte"></label>
         <input asp-for="codiProducte" /> <span asp-validation-for="codiProducte" class="text-danger"></span>
          <label asp-for="nomProducte"></label>
         <input asp-for="nomProducte" /> <span asp-validation-for="nomProducte" class="text-danger"></span>
         <label asp-for="preuProducte"></label>
-        <input asp-for="preuProducte" /> <span asp-validation-for="preuProducte" class="text-danger"></span>
-       
+        <input asp-for="preuProducte" /><span asp-validation-for="preuProducte" class="text-danger"></span>
+  <!--    <label asp-for="imatgeproducte"></label>-->
+            <input type="hidden" value="1pad.webp" asp-for="imatgeproducte" />
+            <span asp-validation-for="imatgeproducte" class="text-danger"></span>
+       <!--
         <dl>
             <dt>
                 <label asp-for="imatgeproducte"></label>
@@ -23,9 +26,10 @@
                 <input asp-for="imatgeproducte" type="file" />
                 <span asp-validation-for="imatgeproducte"></span>
             </dd>
-        </dl>
+        </dl>-->
        
 
 		<input asp-action="AfegirProducte" asp-controller="Producte" type="submit" value="Afegir" />
+        </fieldset>
     </form>
 }
