Mejora en la gestión de errores y retroalimentación
Se ha modificado el método `AfegirProducte` en el controlador `ProducteController` para mejorar la gestión de errores y proporcionar retroalimentación al usuario. Ahora, si el modelo no es válido, se devuelve la vista con el modelo y se establece un valor en `ViewData["pagina"]`. Además, se ha añadido lógica para verificar si el producto se ha añadido correctamente y proporcionar un mensaje de resultado adecuado.

En el repositorio `CistellRepo`, el método `AfegirProducte` ahora devuelve un valor booleano en lugar de `void`, indicando si el producto se ha añadido correctamente o si ya existía.

En la vista `AfegirProducte.cshtml`, se ha añadido un título a la página y se ha incluido un mensaje de resultado que se muestra al usuario. También se han añadido saltos de línea (`<br />`) para mejorar la presentación del formulario.

--- a/CistellAissam/Views/Producte/AfegirProducte.cshtml
+++ b/CistellAissam/Views/Producte/AfegirProducte.cshtml
@@ -1,19 +1,27 @@
 ﻿@model Producte;
-
+@{
+ViewData["title"]="Afegir Producte";
+}
 @section Css {
 	<link href="~/css/estilform.css" rel="stylesheet" />
 }
+
 
 @{
     <form enctype="multipart/form-data" asp-action="AfegirProducte" asp-controller="Producte" method="post">
         <fieldset>
           <legend>Afegir Nou Producte</legend>
+            <span action="text-danger">@ViewData["resultat"] </span>
         <label asp-for="codiProducte"></label>
-        <input asp-for="codiProducte" /> <span asp-validation-for="codiProducte" class="text-danger"></span>
+        <input asp-for="codiProducte" /> <span asp-validation-for="codiProducte" class="text-danger"></span><br />
          <label asp-for="nomProducte"></label>
-        <input asp-for="nomProducte" /> <span asp-validation-for="nomProducte" class="text-danger"></span>
+            <input asp-for="nomProducte" />
+            <span asp-validation-for="nomProducte" class="text-danger"></span>
+            <br />
         <label asp-for="preuProducte"></label>
-        <input asp-for="preuProducte" /><span asp-validation-for="preuProducte" class="text-danger"></span>
+            <input asp-for="preuProducte" />
+            <span asp-validation-for="preuProducte" class="text-danger"></span>
+            <br />
   <!--    <label asp-for="imatgeproducte"></label>-->
             <input type="hidden" value="1pad.webp" asp-for="imatgeproducte" />
             <span asp-validation-for="imatgeproducte" class="text-danger"></span>
