Añadir soporte para carga de imágenes en productos
- Modificado el método `AfegirProducte` en `ProducteController` para aceptar `IFormFile imatgeproducte` y manejar la carga de imágenes.
- Añadido el método `OnPostUploadAsync` en `ProducteController` para gestionar la carga de archivos de imagen.
- Comentada la validación `[Required(ErrorMessage = "Imatge del producte és obligatoria")]` en la propiedad `imatgeproducte` del modelo `Producte`.
- Actualizado el formulario en la vista `AfegirProducte.cshtml` para permitir la carga de archivos de imagen, incluyendo un campo de entrada para el archivo y un botón de envío.
- Añadidos archivos de imagen `24698f34-68cd-446c-8349-c4e70f8e705c_logopad.png`, `6577670d-8391-45e1-9df6-3ae84db8aa15_descarga.png`, y `7283d7da-cfdc-49a1-8dfd-0a9ad3db2aaa_logopad.png`.

--- a/CistellAissam/Views/Producte/AfegirProducte.cshtml
+++ b/CistellAissam/Views/Producte/AfegirProducte.cshtml
@@ -8,7 +8,7 @@ ViewData["title"]="Afegir Producte";
 
 
 @{
-    <form enctype="multipart/form-data" asp-action="AfegirProducte" asp-controller="Producte" method="POST">
+    <form enctype="multipart/form-data" asp-action="AfegirProducte" asp-controller="Producte" method="post">
         <fieldset>
           <legend>Afegir Nou Producte</legend>
             <span class="text-danger">@ViewData["resultat"] </span><br />
@@ -26,15 +26,12 @@ ViewData["title"]="Afegir Producte";
             <input type="hidden" value="1pad.webp" asp-for="imatgeproducte" />
                       <span asp-validation-for="imatgeproducte" class="text-danger"></span>-->
        
-        <dl>
-            <dt>
+        
                 <label asp-for="imatgeproducte"></label>
-            </dt>
-            <dd>
-                <input asp-for="imatgeproducte" type="file" />
+           
+                <input asp-for="imatgeproducte" class="form-control" type="file" accept="image/png,image/jpg" required/>
                 <span asp-validation-for="imatgeproducte"></span>
-            </dd>
-        </dl>
+        
        
 
 		<input  type="submit" value="Afegir" />
@@ -42,5 +39,5 @@ ViewData["title"]="Afegir Producte";
     </form>
 }
 @section Scripts {
-	
+    <partial name="_ValidationScriptsPartial" />
 }
